# debian-libdshconfig

./: .cvsignore  ChangeLog  Makefile.am  Makefile.in  NEWS  autogen.sh  config.h.in  configure  configure.ac  dsh.ver  libdshconfig.dox.in  libdshconfig.spec
CVS/: Entries  Repository
debian/: .cvsignore  README.Debian  changelog  control  copyright  rules
debian/CVS/: Entries  Repository
debian/pbuilder-test/: 001_testlink
debian/pbuilder-test/CVS/: Entries  Repository
tests/: .cvsignore
tests/CVS/: Entries  Repository  Root
